client: jekyll: google indexed redirect for a post

--- a/docs/_posts/2016-03-04-2016-2016-winners.md
+++ b/docs/_posts/2016-03-04-2016-2016-winners.md
@@ -5,6 +5,7 @@ image: /assets/img/blog/2016-hackathon-infographic.png
 author:
   name: Nitin Gupta
   email: nitin@koding.com
+redirect_from: "/blog/2016-winners"
 excerpt_separator: "<!--more-->"
 ---
 
